// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests basic 1`] = `
<Fragment>
  <MapMarker
    autoOpen={false}
    draggable={false}
    key="post-marker-000"
    map={
      Object {
        "setView": [MockFunction],
      }
    }
    popup={
      <Link
        className="popup-link"
        to="/article/000"
      >
        <ForwardRef(Stack)
          spacing={1}
        >
          <ForwardRef(Typography)
            align="center"
            component="h2"
            variant="h6"
          >
            title1
          </ForwardRef(Typography)>
          <ForwardRef(Typography)
            align="center"
          >
            <Image
              borderRadius={true}
              height="100px"
              objectFit="cover"
              src="https://image.jpg"
              width="200px"
            />
          </ForwardRef(Typography)>
          <ForwardRef(Typography)
            align="center"
          >
            <ForwardRef(Typography)
              color="primary"
              variant="button"
            >
              くわしく読む
            </ForwardRef(Typography)>
          </ForwardRef(Typography)>
        </ForwardRef(Stack)>
      </Link>
    }
    position={
      Object {
        "lat": 0,
        "lng": 0,
      }
    }
    variant="blue"
  />
  <MapMarker
    autoOpen={false}
    draggable={false}
    key="post-marker-001"
    map={
      Object {
        "setView": [MockFunction],
      }
    }
    popup={
      <Link
        className="popup-link"
        to="/article/001"
      >
        <ForwardRef(Stack)
          spacing={1}
        >
          <ForwardRef(Typography)
            align="center"
            component="h2"
            variant="h6"
          >
            title2
          </ForwardRef(Typography)>
          <ForwardRef(Typography)
            align="center"
          >
            <ForwardRef(Typography)
              color="primary"
              variant="button"
            >
              くわしく読む
            </ForwardRef(Typography)>
          </ForwardRef(Typography)>
        </ForwardRef(Stack)>
      </Link>
    }
    position={
      Object {
        "lat": 0,
        "lng": 0,
      }
    }
    variant="blue"
  />
</Fragment>
`;

exports[`Shallow Snapshot Tests with hiddenMarkerIds 1`] = `
<Fragment>
  <MapMarker
    autoOpen={false}
    draggable={false}
    key="post-marker-001"
    map={
      Object {
        "setView": [MockFunction],
      }
    }
    popup={
      <Link
        className="popup-link"
        to="/article/001"
      >
        <ForwardRef(Stack)
          spacing={1}
        >
          <ForwardRef(Typography)
            align="center"
            component="h2"
            variant="h6"
          >
            title2
          </ForwardRef(Typography)>
          <ForwardRef(Typography)
            align="center"
          >
            <ForwardRef(Typography)
              color="primary"
              variant="button"
            >
              くわしく読む
            </ForwardRef(Typography)>
          </ForwardRef(Typography)>
        </ForwardRef(Stack)>
      </Link>
    }
    position={
      Object {
        "lat": 0,
        "lng": 0,
      }
    }
    variant="blue"
  />
</Fragment>
`;
